--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ stable-baselines3>=2.0.0
 numpy>=1.24.0
 pandas>=2.0.0
 matplotlib>=3.7.0
+seaborn>=0.12.0
 tensorboard>=2.13.0
 pyyaml>=6.0
 tqdm>=4.65.0
