--- a/data/trained_models/config.json
+++ b/data/trained_models/config.json
@@ -10,32 +10,32 @@
     "max_temp_change_per_second": 5.0
   },
   "cooling": {
-    "max_fan_power": 50.0,
-    "max_pump_power": 30.0,
-    "base_pump_power": 10.0,
-    "air_cooling_capacity": 3000.0,
-    "liquid_cooling_capacity": 12000.0,
-    "natural_convection": 50.0
+    "max_fan_power": 500.0,
+    "max_pump_power": 80.0,
+    "base_pump_power": 15.0,
+    "air_cooling_capacity": 4000.0,
+    "liquid_cooling_capacity": 15000.0,
+    "natural_convection": 80.0
   },
   "reward": {
-    "energy_coefficient": 15.0,
+    "energy_coefficient": 20.0,
     "safe_threshold": 70.0,
     "critical_limit": 90.0,
-    "thermal_penalty_coefficient": 10.0,
+    "thermal_penalty_coefficient": 15.0,
     "emergency_penalty": 100.0,
-    "energy_efficiency_bonus": 2.0
+    "energy_efficiency_bonus": 5.0
   },
   "training": {
-    "timesteps": 500000,
-    "learning_rate": 0.0003,
-    "n_steps": 4096,
+    "timesteps": 1500000,
+    "learning_rate": 0.0001,
+    "n_steps": 8192,
     "batch_size": 256,
-    "gamma": 0.999,
+    "gamma": 0.9995,
     "gae_lambda": 0.98,
-    "ent_coef": 0.01,
+    "ent_coef": 0.005,
     "vf_coef": 0.5,
     "max_grad_norm": 0.5,
-    "n_epochs": 20,
+    "n_epochs": 15,
     "clip_range": 0.2,
     "normalize_advantage": true,
     "normalize_observation": true
@@ -43,9 +43,10 @@
   "environment": {
     "num_racks": 1,
     "servers_per_rack": 10,
-    "max_load_change_per_step": 0.05,
-    "min_initial_load": 0.1,
-    "max_initial_load": 0.3,
-    "episode_length": 1000
+    "max_load_change_per_step": 0.08,
+    "min_initial_load": 0.5,
+    "max_initial_load": 0.9,
+    "load_std": 0.12,
+    "episode_length": 2000
   }
 }
