--- a/configs/optimized.yaml
+++ b/configs/optimized.yaml
@@ -9,30 +9,31 @@ physics:
   max_temp_change_per_second: 5.0
 
 cooling:
-  # Increased cooling power for more optimization leverage
-  max_fan_power: 500.0  # Realistic industrial cooling
+  # Realistic industrial cooling
+  max_fan_power: 500.0
   max_pump_power: 80.0
   base_pump_power: 15.0
-  air_cooling_capacity: 4000.0  # Higher capacity
+  air_cooling_capacity: 4000.0
   liquid_cooling_capacity: 15000.0
   natural_convection: 80.0
 
 reward:
-  energy_coefficient: 20.0  # Stronger energy optimization
-  safe_threshold: 70.0  # Will be adaptive based on load
+  # Aggressive energy optimization
+  energy_coefficient: 30.0  # Even stronger energy focus
+  safe_threshold: 65.0  # Allow higher temps
   critical_limit: 90.0
-  thermal_penalty_coefficient: 15.0
-  emergency_penalty: 100.0
-  energy_efficiency_bonus: 5.0
+  thermal_penalty_coefficient: 20.0
+  emergency_penalty: 150.0
+  energy_efficiency_bonus: 10.0
 
 training:
-  timesteps: 1500000  # Longer training for convergence
-  learning_rate: 0.0001  # Lower LR for stability
-  n_steps: 8192  # Larger rollout buffer
+  timesteps: 1000000  # 1M steps for solid convergence
+  learning_rate: 0.00008  # Slightly lower for stability
+  n_steps: 8192  # Large rollout buffer
   batch_size: 256
-  gamma: 0.9995  # Higher discount for long-term planning
+  gamma: 0.9998  # Very high discount for long-term energy savings
   gae_lambda: 0.98
-  ent_coef: 0.005  # Moderate exploration
+  ent_coef: 0.008  # More exploration for better policies
   vf_coef: 0.5
   max_grad_norm: 0.5
   n_epochs: 15
@@ -43,8 +44,8 @@ training:
 environment:
   num_racks: 1
   servers_per_rack: 10
-  max_load_change_per_step: 0.08
-  min_initial_load: 0.5  # Realistic DC load
-  max_initial_load: 0.9  # High utilization
-  load_std: 0.12  # Dynamic workload variation
-  episode_length: 2000  # Longer episodes for better learning
+  max_load_change_per_step: 0.10  # More dynamic workload
+  min_initial_load: 0.4  # Realistic DC load range
+  max_initial_load: 0.95  # High utilization
+  load_std: 0.15  # Significant workload variation
+  episode_length: 2500  # Longer episodes for better learning
