--- a/configs/default.yaml
+++ b/configs/default.yaml
@@ -1,48 +1,34 @@
 physics:
-  ambient_temp: 22.0
-  server_thermal_mass: 15000
+  ambient_temp: 25.0
   p_idle: 200.0
-  p_max: 800.0
-  r_coeff: 0.5
-  max_temp: 95.0
-  min_temp: 22.0
-  max_temp_change_per_second: 5.0
+  p_max: 500.0
+  max_temp: 85.0
+  min_temp: 20.0
+  server_thermal_mass: 1500.0
+  max_temp_change_per_second: 2.0
 
 cooling:
-  max_fan_power: 50.0
-  max_pump_power: 30.0
-  base_pump_power: 10.0
-  air_cooling_capacity: 3000.0
-  liquid_cooling_capacity: 12000.0
-  natural_convection: 50.0
+  mode: "AIR"
+  max_capacity: 600.0
+  p_max_cooling: 150.0
 
 reward:
-  energy_coefficient: 15.0
-  safe_threshold: 70.0
-  critical_limit: 90.0
-  thermal_penalty_coefficient: 10.0
-  emergency_penalty: 100.0
-  energy_efficiency_bonus: 2.0
+  target_temp_min: 50.0
+  target_temp_max: 60.0
+  safety_limit: 75.0
+  critical_limit: 85.0
+  energy_weight: 0.8
+  safety_weight: 2.0
+  stability_weight: 0.2
 
 training:
-  timesteps: 500000
   learning_rate: 0.0003
-  n_steps: 4096
-  batch_size: 256
-  gamma: 0.999
-  gae_lambda: 0.98
+  n_steps: 2048
+  batch_size: 64
+  n_epochs: 10
+  gamma: 0.99
   ent_coef: 0.01
-  vf_coef: 0.5
-  max_grad_norm: 0.5
-  n_epochs: 20
-  clip_range: 0.2
-  normalize_advantage: true
-  normalize_observation: true
 
-environment:
-  num_racks: 1
-  servers_per_rack: 10
-  max_load_change_per_step: 0.05
-  min_initial_load: 0.1
-  max_initial_load: 0.3
-  episode_length: 1000
+env:
+  num_servers: 10
+  max_steps: 1000
