--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-gymnasium>=0.28.0
-stable-baselines3>=2.0.0
+gymnasium==0.29.1
+stable-baselines3==2.2.1
+torch>=2.1.0
 numpy>=1.24.0
-pandas>=2.0.0
-matplotlib>=3.7.0
-seaborn>=0.12.0
-tensorboard>=2.13.0
-pyyaml>=6.0
-tqdm>=4.65.0
-click>=8.0.0
+pyyaml==6.0.1
+click==8.1.7
+tensorboard>=2.15.0
+matplotlib>=3.8.0
