--- a/configs/optimized.yaml
+++ b/configs/optimized.yaml
@@ -22,7 +22,7 @@ reward:
   energy_coefficient: 0.5
   safe_threshold: 55.0 # Cushion between ideal (46) and penalty
   critical_limit: 75.0
-  thermal_penalty_coefficient: 150.0 # Very strong quadratic penalty
+  thermal_penalty_coefficient: 50.0 # Reduced from 150.0 to prevent gradient explosion
   emergency_penalty: 5000.0
   energy_efficiency_bonus: 2.0
 
