--- a/configs/optimized.yaml
+++ b/configs/optimized.yaml
@@ -18,12 +18,12 @@ cooling:
   natural_convection: 100.0
 
 reward:
-  # Stability First (No Oscillation)
-  energy_coefficient: 0.5
-  safe_threshold: 55.0 # Cushion between ideal (46) and penalty
+  # Stability & Safety First (Aggressive Hard Wall)
+  energy_coefficient: 0.2 # Lowered to prioritize safety over savings
+  safe_threshold: 63.0
   critical_limit: 75.0
-  thermal_penalty_coefficient: 50.0 # Reduced from 150.0 to prevent gradient explosion
-  emergency_penalty: 5000.0
+  thermal_penalty_coefficient: 500.0 # Increased significantly
+  emergency_penalty: 10000.0
   energy_efficiency_bonus: 2.0
 
 training:
