--- a/configs/optimized.yaml
+++ b/configs/optimized.yaml
@@ -27,13 +27,13 @@ reward:
   energy_efficiency_bonus: 2.0
 
 training:
-  timesteps: 1000000 # 1M steps for solid convergence
+  timesteps: 500000
   learning_rate: 0.0003
-  n_steps: 1024 # Slightly larger for better gradient estimation
+  n_steps: 1024
   batch_size: 128
-  gamma: 0.999 # Standard discount
+  gamma: 0.999
   gae_lambda: 0.95
-  ent_coef: 0.001 # Reduced to stop jittering
+  ent_coef: 0.01 # Increased from 0.001 to promote discovery of cooling actions
   vf_coef: 0.5
   max_grad_norm: 0.5
   n_epochs: 10
